--- a/style/contacto.css
+++ b/style/contacto.css
@@ -1,528 +1,480 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap');
-
-
-
-
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap");
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 /* inicio css header nav */
-.headerOficial{
-    height: 170px;
-    width: 100%;
-    background-color: #131212;
+.headerOficial {
+  height: 170px;
+  width: 100%;
+  background-color: #131212;
 }
 
-#logo{
-    width: 100%;
+#logo {
+  width: 100%;
 }
 
-header a{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: center;
+header a {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
 }
 
-header nav{
-    width: 100%;
+header nav {
+  width: 100%;
 }
 
-nav ul{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content:space-evenly;
+nav ul {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: space-evenly;
 }
 
-nav ul li{
-    list-style: none;
-    margin-left: 30px;
-    display: inline-block;
-    padding-top: 10px;
+nav ul li {
+  list-style: none;
+  margin-left: 30px;
+  display: inline-block;
+  padding-top: 10px;
 }
 
 nav a {
-    text-decoration: none !important;
-    color: #fff;
-    font-size: 23px;
-    text-transform: uppercase;
-    font-family: "Montserrat', sans-serif";
-    text-shadow: 1px 2px 2px grey;
+  text-decoration: none !important;
+  color: #fff;
+  font-size: 23px;
+  text-transform: uppercase;
+  font-family: "Montserrat', sans-serif";
+  text-shadow: 1px 2px 2px grey;
 }
 
-nav a:hover{
-    color: #808080;
+nav a:hover {
+  color: #808080;
 }
 
-.navbar{
-    display: none;
+.navbar {
+  display: none;
 }
 
 /* fin css header nav */
-
 /* inicio css formulario */
-
-.mainFormulario{
-    height: auto;
-    width: 100%;
-    background-image: url(../media/img/IMG_5740.JPG);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
+.mainFormulario {
+  height: auto;
+  width: 100%;
+  background-image: url(../media/img/IMG_5740.JPG);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
 }
 
-.formularioContacto{
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
-    background-color: rgba(0,0,0,0.5);
-    border-radius: 13px;
-    padding: 0px 15px 0px 15px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.formularioContacto {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-flow: wrap column;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 13px;
+  padding: 0px 15px 0px 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-
-input{
-    width: 50%;
-    margin-bottom: 10px;
+input {
+  width: 50%;
+  margin-bottom: 10px;
 }
-
 
 label,
-.motMsj{
-    color: #fff;
-    margin: 2px;
+.motMsj {
+  color: #fff;
+  margin: 2px;
 }
 
-.puntos{
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    width: 43%;
-    padding-bottom: 10px;
-    padding-top: 5px;
-    justify-items:center;
+.puntos {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  width: 43%;
+  padding-bottom: 10px;
+  padding-top: 5px;
+  justify-items: center;
 }
 
-.mot{
-    justify-self: start;
+.mot {
+  justify-self: start;
 }
-.radio{
-    justify-self: end;
+
+.radio {
+  justify-self: end;
 }
 
 .radio1,
-.consulta{
-    grid-row: 1/2;
+.consulta {
+  grid-row: 1/2;
 }
 
-
-.msj{
-    display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
+.msj {
+  display: flex;
+  flex-flow: wrap column;
+  justify-content: center;
 }
 
-.botEnviar{
-    margin-top: 15px;
-    align-self: center;
+.botEnviar {
+  margin-top: 15px;
+  align-self: center;
 }
 
-
-.punto2{
-    display: none;
+.punto2 {
+  display: none;
 }
-
-
 
 /* incio css footer */
-
-.foot{
-    width: 100%;
-    background-color: #131212;
-    overflow: hidden;
-    font-family: "Montserrat', sans-serif";
+.foot {
+  width: 100%;
+  background-color: #131212;
+  overflow: hidden;
+  font-family: "Montserrat', sans-serif";
 }
 
-.foot .cajaDatos{
-    width: 95%;
-    max-width: 100%; 
-    margin: auto; 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    padding: 5px 10px;
+.foot .cajaDatos {
+  width: 95%;
+  max-width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  padding: 5px 10px;
 }
 
-.foot .cajaDatos .cajaIco ul li{
-    list-style: none;
-    display: inline-block;
+.foot .cajaDatos .cajaIco ul li {
+  list-style: none;
+  display: inline-block;
 }
 
-.foot .cajaDatos .cajaDatos1 .datos{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: left;
-    margin-top: -16px;
+.foot .cajaDatos .cajaDatos1 .datos {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: left;
+  margin-top: -16px;
 }
 
-
-.foot .cajaIco{
-    display: flex;
-    flex-flow: wrap row;
-    justify-content: right;
-    grid-column: 3/4;
+.foot .cajaIco {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: right;
+  grid-column: 3/4;
 }
 
-.cajaDatos .cajaDatos1 p a{
-    text-decoration: none;
-    color: #fff;
-    margin-right: 15px;
+.cajaDatos .cajaDatos1 p a {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 15px;
 }
 
-.foot .cajaDatos .cajaCopy{
-    text-align: center;
-    padding: 5px 0px;
-    color: #fff;
-    grid-column: 2/3;
-    font-size: 17px;
-    margin-bottom: -15px;
+.foot .cajaDatos .cajaCopy {
+  text-align: center;
+  padding: 5px 0px;
+  color: #fff;
+  grid-column: 2/3;
+  font-size: 17px;
+  margin-bottom: -15px;
 }
 
-
-.nombre{
-    color: #fff;
+.nombre {
+  color: #fff;
 }
 
 /* fin css footer */
-
 /* -----inicio media query---------- */
 /* -----inicio media query---------- */
-
-
-
-@media only screen and (min-width: 1020px){
-
-/* inicio media query header */
-
-.headerOficial{
+@media only screen and (min-width: 1020px) {
+  /* inicio media query header */
+  .headerOficial {
     height: 170px;
-}
+  }
 
-header a img{
+  header a img {
     width: 440px;
     height: 110px;
-}
+  }
 
-
-#logo{
+  #logo {
     height: 60%;
     padding-top: 15px;
-}
+  }
 
-nav ul{
+  nav ul {
     padding-top: 5px;
-}
+  }
 
-/* fin media query header */
-
-.punto2{
+  /* fin media query header */
+  .punto2 {
     display: none;
-}
+  }
 
-/* inicio media query footer */
-
-.foot .cajaIco{
+  /* inicio media query footer */
+  .foot .cajaIco {
     display: grid;
     flex-flow: wrap row;
     justify-content: right;
-}
+  }
 
-.foot .cajaDatos .cajaCopy{
+  .foot .cajaDatos .cajaCopy {
     padding-top: 15px;
     font-size: 14px;
+  }
+
+  /* fin media query footer */
 }
-/* fin media query footer */
-}
-
-
-@media only screen and (max-width: 930px){
-
-
-.mainFormulario{
+@media only screen and (max-width: 930px) {
+  .mainFormulario {
     height: auto;
-}
+  }
 
-
-/* inicio media query header */
-
-.headerOficial{
+  /* inicio media query header */
+  .headerOficial {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     height: auto;
-}
+  }
 
-#logo{
+  #logo {
     width: 100%;
     padding-top: 15px;
     padding-right: 30px;
-}
+  }
 
-nav ul{
+  nav ul {
     display: flex;
     flex-flow: wrap row;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     padding-top: 15px;
     padding-right: 20px;
-}
+  }
 
-/* fin media query header */
-
-.formularioContacto{
+  /* fin media query header */
+  .formularioContacto {
     height: auto;
     margin-top: 100px;
+  }
 
-}
-
-.puntos2{
+  .puntos2 {
     display: none;
-}
+  }
 
-
-/*inicio footer query  */
-
-
-.foot .cajaDatos{
+  /*inicio footer query  */
+  .foot .cajaDatos {
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1{
+  .foot .cajaDatos .cajaDatos1 {
     text-align: center;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1 .nombre{
+  .foot .cajaDatos .cajaDatos1 .nombre {
     margin-right: 5px;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1 .datos{
+  .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
     display: flex;
     flex-flow: wrap column;
-}
+  }
 
-.foot .cajaDatos .cajaIco{
+  .foot .cajaDatos .cajaIco {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 15px;
-}
+  }
 
-.foot .cajaDatos .cajaCopy{
+  .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
     font-size: 13px;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1 a{
+  .foot .cajaDatos .cajaDatos1 a {
     margin: 0px !important;
+  }
+
+  /* fin query footer */
 }
-/* fin query footer */
-
-
-}
-
-@media only screen and (max-width: 485px){
-
-/* inicio media query header */
-.headerOficial{
+@media only screen and (max-width: 485px) {
+  /* inicio media query header */
+  .headerOficial {
     display: block;
-}
+  }
 
-nav{
-    display:none;
-}
+  nav {
+    display: none;
+  }
 
-#logo{
+  #logo {
     width: 50%;
     height: 60%;
     padding-top: 10px;
-}
+  }
 
-header a{
+  header a {
     display: none;
-}
+  }
 
-nav ul li a{
+  nav ul li a {
     display: none;
-}
+  }
 
-.navbar{
+  .navbar {
     display: flex;
-}
+  }
 
-.navbar-toggler{
+  .navbar-toggler {
     border: 0.4px solid white !important;
-}
+  }
 
-.nav-link{
+  .nav-link {
     text-transform: uppercase;
     font-family: "Montserrat', sans-serif";
     text-shadow: 1px 2px 2px grey;
     color: #fff !important;
     font-size: 20px;
-}
+  }
 
-/* fin media query header */
-
-/* inicio media query formulario */
-.mainFormulario{
+  /* fin media query header */
+  /* inicio media query formulario */
+  .mainFormulario {
     height: 120vh;
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
     padding: 0px 15px 0px 15px;
-}
+  }
 
-.formularioContacto{
+  .formularioContacto {
     height: auto;
     background: none;
     padding: 0px !important;
     margin: 0px !important;
-}
+  }
 
-.usted{
+  .usted {
     width: 50px;
     align-self: center;
-}
+  }
 
-input{
+  input {
     width: 200px;
     align-self: center;
     margin-top: 5px;
-}
+  }
 
-label{
+  label {
     align-self: center;
-}
+  }
 
-.formularioContacto p{
+  .formularioContacto p {
     text-align: center;
-}
+  }
 
-.puntos{
+  .puntos {
     display: none;
-}
+  }
 
-.motMsj{
+  .motMsj {
     height: 25px;
-}
+  }
 
-textarea{
-    width:400px;
-}
+  textarea {
+    width: 400px;
+  }
 
-.punto2{
+  .punto2 {
     width: 100px;
     display: list-item;
     align-self: center;
     margin-bottom: 30px;
-}
-/* fin media query formulario */
+  }
 
-
-/* incio media query footer */
-
-.foot .cajaDatos{
+  /* fin media query formulario */
+  /* incio media query footer */
+  .foot .cajaDatos {
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1{
+  .foot .cajaDatos .cajaDatos1 {
     text-align: center;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1 .nombre{
+  .foot .cajaDatos .cajaDatos1 .nombre {
     margin-right: 5px;
-}
+  }
 
-.foot .cajaDatos .cajaDatos1 .datos{
+  .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
     display: flex;
     flex-flow: wrap column;
-}
+  }
 
-.foot .cajaDatos .cajaIco{
+  .foot .cajaDatos .cajaIco {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 15px;
-}
+  }
 
-.foot .cajaDatos .cajaCopy{
+  .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
     font-size: 13px;
+  }
+
+  /* fin media query footer */
 }
-/* fin media query footer */
-}
-
-@media only screen and (max-width: 394px){
-
-
-.mainFormulario{
+@media only screen and (max-width: 394px) {
+  .mainFormulario {
     height: 110vh;
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
     padding: 0px 15px 0px 15px;
-}
+  }
 
-.navbar{
+  .navbar {
     display: flex;
-}
+  }
 
-.formularioContacto{
+  .formularioContacto {
     height: auto;
     padding-bottom: 150px;
-}
+  }
 
-textarea { 
-    width: 330px; 
+  textarea {
+    width: 330px;
     height: 150px;
+  }
 }
-
-}
-
-@media only screen and (max-width: 345px){
-
-
-.nav-link{
+@media only screen and (max-width: 345px) {
+  .nav-link {
     font-size: 18px;
-}
+  }
 
-.mainFormulario{
+  .mainFormulario {
     height: auto;
-}
+  }
 
-.formularioContacto{
+  .formularioContacto {
     height: auto;
     padding-bottom: 150px;
-}
-textarea{
+  }
+
+  textarea {
     width: 290px !important;
     margin: 0px;
+  }
 }
 
-}
-
-
-
+/*# sourceMappingURL=contacto.css.map */
