--- a/style/galeria.scss
+++ b/style/galeria.scss
@@ -1,271 +1,309 @@
-@import url("https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap");
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Montserrat:ital,wght@0,300;0,400;1,200&display=swap');
+
+
+
+
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
 /* inicio css header nav */
-.headerOficial {
-  height: 170px;
-  width: 100%;
-  background-color: #131212;
+.headerOficial{
+    height: 170px;
+    width: 100%;
+    background-color: #131212;
+
 }
 
-#logo {
-  width: 100%;
+#logo{
+    width: 100%;
+    
+
 }
 
-header a {
-  display: flex;
-  flex-flow: wrap row;
-  justify-content: center;
+header a{
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: center;
+    
 }
 
-header nav {
-  width: 100%;
+header nav{
+    width: 100%;
+    
 }
 
-nav ul {
-  display: flex;
-  flex-flow: wrap row;
-  justify-content: space-evenly;
+nav ul{
+    display: flex;
+    flex-flow: wrap row;
+    justify-content:space-evenly;
+    
 }
 
-nav ul li {
-  list-style: none;
-  margin-left: 30px;
-  display: inline-block;
-  padding-top: 10px;
+nav ul li{
+    list-style: none;
+    margin-left: 30px;
+    display: inline-block;
+    padding-top: 10px;  
 }
 
-.navbar {
-  display: none;
+.navbar{
+    display: none;
 }
 
 nav a {
-  text-decoration: none !important;
-  color: #fff;
-  font-size: 23px;
-  text-transform: uppercase;
-  font-family: "Montserrat', sans-serif";
-  text-shadow: 1px 2px 2px grey;
+    text-decoration: none !important;
+    color: #fff;
+    font-size: 23px;
+    text-transform: uppercase;
+    font-family: "Montserrat', sans-serif";
+    text-shadow: 1px 2px 2px grey;
 }
 
-nav a:hover {
-  color: #808080;
+nav a:hover{
+    color: #808080;
 }
 
 /* fin css header nav */
+
 /* inicio css main galeria */
-.mainGaleria {
-  height: 100vh;
-  width: 100%;
-  background-color: #262525;
-  display: grid;
-  padding: 25px;
-  grid-gap: 15px;
+
+.mainGaleria{
+    height: 100vh;
+    width: 100%;
+    background-color: #262525;
+    display: grid;
+    padding: 25px;
+    grid-gap: 15px;
 }
 
-.foto1 {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  background-image: url(../media/img/IMG_8844.JPG);
-  background-size: cover;
-  background-position: center;
+.foto1{
+    grid-column: 1/3;
+    grid-row: 1/3;
+    background-image: url(../media/img/IMG_8844.JPG);
+    background-size: cover;
+    background-position: center;
 }
 
-.foto2 {
-  grid-column: 3/4;
-  grid-row: 1/3;
-  background-image: url(../media/img/IMG_3476.JPG);
-  background-size: cover;
-  background-position: center;
+.foto2{
+    grid-column: 3/4;
+    grid-row: 1/3;
+    background-image: url(../media/img/IMG_3476.JPG);
+    background-size: cover;
+    background-position: center;
+    
 }
 
-.foto3 {
-  grid-column: 4/5;
-  grid-row: 1/3;
-  background-image: url(../media/img/IMG_2345.JPG);
-  background-size: cover;
-  background-position: top;
+.foto3{
+    grid-column: 4/5;
+    grid-row: 1/3;
+    background-image: url(../media/img/IMG_2345.JPG);
+    background-size: cover;
+    background-position: top;
+
 }
 
-.foto4 {
-  grid-column: 5/6;
-  grid-row: 1/3;
-  background-image: url(../media/img/IMG_9234.JPG);
-  background-size: cover;
-  background-position: center;
+.foto4{
+    grid-column: 5/6;
+    grid-row: 1/3;
+    background-image: url(../media/img/IMG_9234.JPG);
+    background-size: cover;
+    background-position: center;
 }
 
-.foto5 {
-  grid-column: 1/4;
-  grid-row: 3/5;
-  background-image: url(../media/img/IMG_3733.JPG);
-  background-size: cover;
-  background-position: end;
+.foto5{
+    grid-column: 1/4;
+    grid-row: 3/5;
+    background-image: url(../media/img/IMG_3733.JPG);
+    background-size: cover;
+    background-position: end;
 }
 
-.foto6 {
-  grid-column: 4/6;
-  grid-row: 3/5;
-  background-image: url(../media/img/IMG_2543.JPG);
-  background-size: cover;
-  background-position: center;
+.foto6{
+    grid-column: 4/6;
+    grid-row: 3/5;
+    background-image: url(../media/img/IMG_2543.JPG);
+    background-size: cover;
+    background-position: center;
 }
+
 
 /* fin css main galeria */
+
+
 /* incio css footer */
-.foot {
-  width: 100%;
-  background-color: #131212;
-  overflow: hidden;
-  font-family: "Montserrat', sans-serif";
+
+.foot{
+    width: 100%;
+    background-color: #131212;
+    overflow: hidden;
+    font-family: "Montserrat', sans-serif";
 }
 
-.foot .cajaDatos {
-  width: 95%;
-  max-width: 100%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  padding: 5px 10px;
+.foot .cajaDatos{
+    width: 95%;
+    max-width: 100%; 
+    margin: auto; 
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    padding: 5px 10px;
 }
 
-.foot .cajaDatos .cajaIco ul li {
-  list-style: none;
-  display: inline-block;
+.foot .cajaDatos .cajaIco ul li{
+    list-style: none;
+    display: inline-block;
+    
 }
 
-.foot .cajaDatos .cajaDatos1 .datos {
-  display: flex;
-  flex-flow: wrap row;
-  justify-content: left;
-  margin-top: -16px;
+.foot .cajaDatos .cajaDatos1 .datos{
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: left;
+    margin-top: -16px;
 }
 
-.foot .cajaIco {
-  display: flex;
-  flex-flow: wrap row;
-  justify-content: right;
-  grid-column: 3/4;
+
+.foot .cajaIco{
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: right;
+    grid-column: 3/4;
 }
 
-.cajaDatos .cajaDatos1 p a {
-  text-decoration: none;
-  color: #fff;
-  margin-right: 15px;
+.cajaDatos .cajaDatos1 p a{
+    text-decoration: none;
+    color: #fff;
+    margin-right: 15px;
 }
 
-.foot .cajaDatos .cajaCopy {
-  text-align: center;
-  padding: 5px 0px;
-  color: #fff;
-  grid-column: 2/3;
-  font-size: 17px;
-  margin-bottom: -15px;
+.foot .cajaDatos .cajaCopy{
+    text-align: center;
+    padding: 5px 0px;
+    color: #fff;
+    grid-column: 2/3;
+    font-size: 17px;
+    margin-bottom: -15px;
 }
 
-.nombre {
-  color: #fff;
+
+.nombre{
+    color: #fff;
 }
 
 /* fin css footer */
-@media only screen and (min-width: 1025px) {
-  .headerOficial {
-    height: 170px;
-  }
 
-  header a img {
+
+@media only screen and (min-width: 1025px){
+
+.headerOficial{
+    height: 170px;
+}
+
+header a img{
     width: 440px;
     height: 110px;
-  }
+    
+}
 
-  /* inicio media query header */
-  #logo {
+/* inicio media query header */
+
+#logo{
     height: 60%;
     padding-top: 15px;
-  }
+}
 
-  nav ul {
+nav ul{
     padding-top: 5px;
-  }
+}
 
-  /* inicio media query main */
-  .mainGaleria {
+/* inicio media query main */
+
+.mainGaleria{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr); 
     grid-template-rows: repeat(4, 1fr);
-  }
+}
 
-  .foto1 {
+
+.foto1{
     background-position-x: 500px;
-  }
+}
 
-  .foto3 {
+.foto3{
     background-position: initial;
-  }
+}
 
-  .foto2 {
+.foto2{
     background-image: url(../media/img/IMG_9710.JPG);
     background-position: top;
-  }
+}
 
-  .foto4 {
+.foto4{
     background-position-x: 470px;
-  }
+}
 
-  /* fin media query main */
-  /* inicio media query footer */
-  .foot .cajaIco {
+/* fin media query main */
+
+/* inicio media query footer */
+
+.foot .cajaIco{
     display: grid;
     flex-flow: wrap row;
     justify-content: right;
-  }
+}
 
-  .foot .cajaDatos .cajaCopy {
+.foot .cajaDatos .cajaCopy{
     padding-top: 15px;
     font-size: 14px;
-  }
-
-  /* fin media query footer */
 }
-@media only screen and (max-width: 930px) {
-  /* inicio media query header */
-  .headerOficial {
+/* fin media query footer */
+}
+
+
+@media only screen and (max-width: 930px){
+
+
+/* inicio media query header */
+
+.headerOficial{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     height: auto;
-  }
+    
+}
 
-  #logo {
+#logo{
     width: 100%;
     padding-top: 15px;
     padding-right: 30px;
-  }
+}
 
-  nav ul {
+nav ul{
     display: flex;
     flex-flow: wrap row;
-    justify-content: space-evenly;
+    justify-content:space-evenly;
     padding-top: 15px;
     padding-right: 20px;
-  }
+}
 
-  /* fin media query header */
-  /* inicio media query main */
-  .mainGaleria {
+/* fin media query header */
+
+/* inicio media query main */
+
+.mainGaleria{
     height: 280vh;
     width: 100%;
     display: grid;
-    grid-template-columns: 0fr 1fr 0fr;
+    grid-template-columns: 0fr 1fr 0fr ;
     grid-template-rows: repeat(12, 1fr);
     padding: 10px;
-  }
+    
+}
 
-  .foto1 {
+.foto1{
     grid-column: 2/3;
     grid-row: 1/3;
     background-image: url(../media/img/IMG_8844.JPG);
@@ -274,9 +312,9 @@ nav a:hover {
     height: 100%;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto2 {
+.foto2{
     grid-column: 2/3;
     grid-row: 3/5;
     background-image: url(../media/img/IMG_3476.JPG);
@@ -284,9 +322,9 @@ nav a:hover {
     background-position: center;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto3 {
+.foto3{
     grid-column: 2/3;
     grid-row: 5/7;
     background-image: url(../media/img/IMG_1932.jpg);
@@ -294,9 +332,9 @@ nav a:hover {
     background-position: top;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto4 {
+.foto4{
     grid-column: 2/3;
     grid-row: 7/9;
     background-image: url(../media/img/IMG_9234.JPG);
@@ -304,9 +342,9 @@ nav a:hover {
     background-position: center;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto5 {
+.foto5{
     grid-column: 2/3;
     grid-row: 9/11;
     background-image: url(../media/img/IMG_3733.JPG);
@@ -314,9 +352,9 @@ nav a:hover {
     background-position: center;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto6 {
+.foto6{
     grid-column: 2/3;
     grid-row: 11/13;
     background-image: url(../media/img/IMG_2543.JPG);
@@ -324,99 +362,115 @@ nav a:hover {
     background-position: center;
     background-size: 700px 450px;
     background-repeat: no-repeat;
-  }
+}
 
-  /* fin media query main */
-  /*inicio footer query  */
-  .foot .cajaDatos {
+
+
+
+
+
+
+/* fin media query main */
+
+/*inicio footer query  */
+
+
+.foot .cajaDatos{
+
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-  }
+}
 
-  .foot .cajaDatos .cajaDatos1 {
+.foot .cajaDatos .cajaDatos1{
     text-align: center;
-  }
 
-  .foot .cajaDatos .cajaDatos1 .nombre {
+}
+
+.foot .cajaDatos .cajaDatos1 .nombre{
     margin-right: 5px;
-  }
+}
 
-  .foot .cajaDatos .cajaDatos1 .datos {
+.foot .cajaDatos .cajaDatos1 .datos{
     padding-top: 5px;
     display: flex;
     flex-flow: wrap column;
-  }
+}
 
-  .cajaDatos .cajaDatos1 p a {
+.cajaDatos .cajaDatos1 p a{
     margin-right: 0px !important;
-  }
+}
 
-  .foot .cajaDatos .cajaIco {
+.foot .cajaDatos .cajaIco{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 15px;
-  }
+}
 
-  .foot .cajaDatos .cajaCopy {
+.foot .cajaDatos .cajaCopy{
     padding-top: 10px;
     font-size: 13px;
-  }
-
-  /* fin query footer */
 }
-@media only screen and (max-width: 485px) {
-  /* inicio media query header */
-  html, body {
+/* fin query footer */
+
+
+}
+
+@media only screen and (max-width: 485px){
+
+/* inicio media query header */
+html, body {
     max-width: 100% !important;
     overflow-x: hidden !important;
-  }
+}
 
-  .headerOficial {
+.headerOficial{
     display: block;
-  }
+}
 
-  nav {
+nav{
     display: none;
-  }
+}
 
-  nav ul li a {
+nav ul li a{
     display: none;
-  }
+}
 
-  header a {
+header a{
     display: none;
-  }
+}
 
-  .navbar {
+.navbar{
     display: flex;
-  }
+}
 
-  .navbar-toggler {
+.navbar-toggler{
     border: 0.4px solid white !important;
-  }
+}
 
-  .nav-link {
+.nav-link{
     text-transform: uppercase;
     font-family: "Montserrat', sans-serif";
     text-shadow: 1px 2px 2px grey;
     color: #fff !important;
     font-size: 20px;
-  }
+}
+/* fin media query header */
 
-  /* fin media query header */
-  /* inicio media query main */
-  .mainGaleria {
+/* inicio media query main */
+
+.mainGaleria{
     height: 250vh;
     width: 100%;
     display: grid;
-    grid-template-columns: 0fr 1fr 0fr;
+    grid-template-columns: 0fr 1fr 0fr ;
     grid-template-rows: repeat(12, 1fr);
     padding: 10px;
-  }
+    
+}
 
-  .foto1 {
+.foto1{
     grid-column: 2/3;
     grid-row: 1/3;
     background-image: url(../media/img/IMG_8844.JPG);
@@ -425,9 +479,9 @@ nav a:hover {
     height: 100%;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto2 {
+.foto2{
     grid-column: 2/3;
     grid-row: 3/5;
     background-image: url(../media/img/IMG_3476.JPG);
@@ -435,9 +489,9 @@ nav a:hover {
     background-position: center;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto3 {
+.foto3{
     grid-column: 2/3;
     grid-row: 5/7;
     background-image: url(../media/img/IMG_1932.jpg);
@@ -445,9 +499,9 @@ nav a:hover {
     background-position: top;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto4 {
+.foto4{
     grid-column: 2/3;
     grid-row: 7/9;
     background-image: url(../media/img/IMG_9234.JPG);
@@ -455,9 +509,9 @@ nav a:hover {
     background-position: center;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto5 {
+.foto5{
     grid-column: 2/3;
     grid-row: 9/11;
     background-image: url(../media/img/IMG_3733.JPG);
@@ -465,9 +519,9 @@ nav a:hover {
     background-position: center;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  .foto6 {
+.foto6{
     grid-column: 2/3;
     grid-row: 11/13;
     background-image: url(../media/img/IMG_2543.JPG);
@@ -475,52 +529,60 @@ nav a:hover {
     background-position: center;
     background-size: 400px 300px;
     background-repeat: no-repeat;
-  }
+}
 
-  /* fin media query main */
-  /* incio media query footer */
-  .foot .cajaDatos {
+/* fin media query main */
+
+/* incio media query footer */
+
+.foot .cajaDatos{
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-  }
 
-  .foot .cajaDatos .cajaDatos1 {
+
+}
+
+.foot .cajaDatos .cajaDatos1{
     text-align: center;
-  }
+    
+}
 
-  .foot .cajaDatos .cajaDatos1 .nombre {
+.foot .cajaDatos .cajaDatos1 .nombre{
     margin-right: 5px;
-  }
+}
 
-  .foot .cajaDatos .cajaDatos1 .datos {
+.foot .cajaDatos .cajaDatos1 .datos{
     padding-top: 5px;
     display: flex;
     flex-flow: wrap column;
-  }
+    
+}
 
-  .foot .cajaDatos .cajaIco {
+.foot .cajaDatos .cajaIco{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 15px;
-  }
+}
 
-  .foot .cajaDatos .cajaCopy {
+
+
+.foot .cajaDatos .cajaCopy{
     padding-top: 10px;
     font-size: 13px;
-  }
-
-  /* fin media query footer */
 }
-@media only screen and (max-width: 380px) {
-  .navbar {
+/* fin media query footer */
+}
+
+@media only screen and (max-width: 380px){
+
+.navbar{
     display: flex;
-  }
-
-  .mainGaleria {
-    height: 200vh;
-  }
 }
 
-/*# sourceMappingURL=galeria.css.map */
+.mainGaleria{
+    height: 200vh ;
+}
+
+}
